# DeePC-Sandbox

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  config.py  main.py  plotting.py  pyproject.toml  run.py  tune.py
comparison/: compare_versions.py  metrics.py  process_results.py  stress_configs.py
control/: config.py  controller.py  noise_estimator.py  online_hankel.py  regularization.py
data/: data_generation.py
deepc/: __init__.py  deepc_controller.py  hankel.py
plants/: __init__.py  base.py  bicycle_model.py  coupled_masses.py
results/v1_baseline/: v1_baseline_metrics.json  v1_baseline_results.npz  v1_baseline_scalars.json
results/v2/: v2_metrics.json  v2_results.npz  v2_scalars.json
results/v3/: v3_metrics.json  v3_results.npz  v3_scalars.json
results/v4/: v4_circle_metrics.json  v4_circle_results.npz  v4_circle_scalars.json  v4_gate_report.json  v4_hard_metrics.json  v4_hard_results.npz  v4_hard_scalars.json  v4_metrics.json  v4_results.npz  v4_scalars.json  v4_square_metrics.json  v4_square_results.npz  v4_square_scalars.json  v4_zigzag_metrics.json  v4_zigzag_results.npz  v4_zigzag_scalars.json
sim/: __main__.py  data_generation.py  gate.py  scenarios.py  simulation.py
sim/comparison/: compare_versions.py  metrics.py  process_results.py  stress_configs.py
sim/eval/: data_generation.py  gate.py  (+3 more)
simulator/: __init__.py  vehicle_simulator.py
v1_baseline/: README.md  gate.py  gate_v1.py  main.py  stress_test.py
v2/: gate.py  main.py
v3/: gate.py  main.py
v4/: gate.py  main.py
v5/: gate.py  main.py
v6/: gate.py  main.py
(+28 files in other folders)
