[project]
name = "deepc-sandbox"
version = "0.1.0"
description = "DeePC sandbox — developing, testing, and benchmarking Data-Enabled Predictive Control algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[tool.ruff.lint.per-file-ignores]
"v1_baseline/main.py" = ["E402"]
"v1_baseline/gate.py" = ["E402"]
"comparison/process_results.py" = ["E402"]
